--- a/app/com/facebook/web/view/index.scala.html
+++ b/app/com/facebook/web/view/index.scala.html
@@ -39,14 +39,14 @@
 								    	console.log('calling login...');
 								 			  }, 
 								    			{scope: 'read_stream'},
-												{redirect_url: 'http://localhost:9000/selectPages'}
+												{redirect_url: 'http://178.79.182.229:7070/selectPages'}
 										);
 										 } else
 										 {
 										/* $http.get('/selectPages',{params:{"appAccessToken": $scope.appAccessToken}})
-										.then(function(res){window.location = 'http://localhost:9000/selectPages'}, function(error){}); */
+										.then(function(res){window.location = 'http://178.79.182.229:7070/selectPages'}, function(error){}); */
 											
-										window.location = 'http://localhost:9000/selectPages/'+$scope.appAccessToken
+										window.location = 'http://178.79.182.229:7070/selectPages/'+$scope.appAccessToken
 										console.log($scope.appAccessToken);
 										 }
 					});
@@ -56,7 +56,7 @@
 						FB.Event.subscribe('auth.login', function(response) {
 							 if (response.status === 'connected') {
 								 $scope.appAccessToken = response.authResponse.accessToken;
-								 window.location = 'http://localhost:9000/selectPages/'+$scope.appAccessToken
+								 window.location = 'http://178.79.182.229:7070/selectPages/'+$scope.appAccessToken
 		
 			        }
 						
