--- a/app/views/selectPages.scala.html
+++ b/app/views/selectPages.scala.html
@@ -5,6 +5,8 @@
     <script src='@routes.Assets.at("app/bower_components/jquery/dist/jquery.min.js")'></script>
     <script src='@routes.Assets.at("app/bower_components/angular/angular.js")'></script>
 	<script src='@routes.Assets.at("javascripts/main.js")'>  </script>
+    <script src='@routes.Assets.at("javascripts/jquery.fileDownload.js")'></script>
+    
     <script src='@routes.Assets.at("app/bower_components/angular-resource/angular-resource.js")'></script>
 	<script	src="http://vitalets.github.io/checklist-model/checklist-model.js">  </script>
 
