--- a/app/views/selectPages.scala.html
+++ b/app/views/selectPages.scala.html
@@ -3,6 +3,7 @@
 <head>
 
     <script src='@routes.Assets.at("app/bower_components/jquery/dist/jquery.min.js")'></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
     <script src='@routes.Assets.at("app/bower_components/angular/angular.js")'></script>
 	<script src='@routes.Assets.at("javascripts/main.js")'>  </script>
     <script src='@routes.Assets.at("javascripts/jquery.fileDownload.js")'></script>
