--- a/app/views/selectPages.scala.html
+++ b/app/views/selectPages.scala.html
@@ -7,7 +7,7 @@
     <script src='@routes.Assets.at("app/bower_components/angular/angular.js")'></script>
 	<script src='@routes.Assets.at("javascripts/main.js")'>  </script>
     <script src='@routes.Assets.at("javascripts/jquery.fileDownload.js")'></script>
-    
+    <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css">
     <script src='@routes.Assets.at("app/bower_components/angular-resource/angular-resource.js")'></script>
 	<script	src="http://vitalets.github.io/checklist-model/checklist-model.js">  </script>
 
