--- a/app/views/adminhome.scala.html
+++ b/app/views/adminhome.scala.html
@@ -35,7 +35,7 @@
                 <section class="dadsrchdiv">
    <form> <div>  <input type="text" id="search_name" ng-model="search_name" /> 
       <input type="button" name="search" value="Search" ng-click=searchPage() />
-    <input type="button" name="home" value="Home" ng-click="getall()" style="float:right;">
+    <input type="button" name="home" value="Refresh" ng-click="getall()" style="float:right;">
      </div></form>
      <form>
      <table>
